mobile button alignment fixes

--- a/src/app/shared/components/cards/cards.component.scss
+++ b/src/app/shared/components/cards/cards.component.scss
@@ -117,7 +117,7 @@
     
     @media (max-width: 767px){
       .button1 {
-        left: 36%;
+        left: 28%;
       }
 
       .flip-card {
